--- a/src/css/main.css
+++ b/src/css/main.css
@@ -47,6 +47,7 @@ body{
     padding: 0px;
     margin: 0px;
     background-color: var(--bg);
+    color: var(--front);
 }
 
 p{
